# arxiv-metric

./: .env.example  .gitignore  20260116_145326_final.json  20260116_213117_final.json  20260116_213806_mt_final.json  20260116_214442_mt_final.json  20260116_215056_mt_final.json  20260116_215753_mt_final.json  20260116_220625_mt_final.json  20260116_221344_mt_final.json  20260116_222013_mt_final.json  20260116_223451_mt_final.json  20260116_224116_mt_final.json  20260116_234138_mt_final.json  20260116_235108_mt_final.json  20260116_235754_mt_final.json  20260117_011702_final.json  20260117_020743_mt_final.json  CLAUDE.md  LICENSE  PROMPTS.md  README.md  SCORING.md  SUMMARY.md  docs.html  index.html  manifest.json  pyproject.toml
data/prompts/: cs_scenarios.yaml  delusion_scenarios.yaml  general_scenarios.yaml  physics_scenarios.yaml
docs/: ca357311-9939-4c04-a8a6-20ecdcfdf665.jsonl  chatgpt-example-transcript.md
scripts/: __init__.py  deploy_pages.sh  generate_site.py  judge_chatgpt_transcript.py  run_all_models.sh  run_benchmark.py  run_delusion_eval.py  test_apis.py  view_results.html
slides/: colloquium-md2gslides.md  colloquium-slides.md  colloquium.pptx
src/: __init__.py
src/delusion/: __init__.py  judge.py  runner.py  types.py
src/evaluation/: __init__.py  judge.py  multiturn_judge.py  taxonomy.py
src/execution/: __init__.py  runner.py
src/metrics/: __init__.py  afim_score.py  multiturn_score.py
src/multiturn/: __init__.py  follow_up_generator.py  runner.py  types.py
tests/: __init__.py  test_afim_score.py  test_prompts.py  test_taxonomy.py
(+8 files in other folders)
